--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@aws-cdk/assertions": "^1.204.0",
+    "@types/aws-lambda": "^8.10.146",
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
     "aws-cdk": "2.1005.0",
+    "esbuild": "^0.24.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.4.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@types/node": "^22.10.0",
     "aws-cdk-lib": "2.181.1",
+    "aws-sdk": "^2.1692.0",
     "constructs": "^10.0.0"
   }
 }
