--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,34 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES2019",
     "module": "commonjs",
+    "outDir": "./dist",
+    "strict": true,
     "lib": [
-      "es2020",
+      "es2019",
       "dom"
     ],
-    "declaration": true,
-    "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "noImplicitThis": true,
     "alwaysStrict": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": false,
     "inlineSourceMap": true,
     "inlineSources": true,
     "experimentalDecorators": true,
-    "strictPropertyInitialization": false,
-    "typeRoots": [
-      "./node_modules/@types"
-    ]
+    // "typeRoots": [
+    //   "./node_modules/@types",
+    //   "./src/types"
+    // ],
+    
   },
+  "include": ["src/**/*", "src/types/global.d.ts"],
   "exclude": [
     "node_modules",
-    "cdk.out"
-  ]
+    "cdk.out",
+    "src/**/*.test.*"
+  ],
 }
